--- a/src/content/blog/my-fisrt-blog.mdx
+++ b/src/content/blog/my-fisrt-blog.mdx
@@ -14,6 +14,6 @@ tags: ["life"]
 
 ###  astro的架构
 我使用了liruifeng的blog的整体架构，配色和卡片结构参考了[衛斯理](https://imwsl.com/) 的博客。在导航板块中，我添加了博客和标签的页面，首页添加了最新显示博文的功能。
-在使用astro的过程当中，我能感觉才astro的优势在于写起来很舒服。在写astro的过程中，你可以充分的将需要的东西组件化，和写Vue很像。而astro又把文章通过`getCollection`来进行相关的读取，也就是我们在写整体的时候，不需要考虑怎样动态化的读取文章，最耗费时间的其实是在写Css上面。
+在使用astro的过程当中，我能感觉才astro的优势在于写起来很舒服。在写astro的过程中，你可以充分的将需要的东西组件化，和写Vue很像。而astro又把文章通过*getCollection*来进行相关的读取，也就是我们在写整体的时候，不需要考虑怎样动态化的读取文章，最耗费时间的其实是在写Css上面。
 
 对于astro，我还并不是太熟悉，但是我会把它作为写简单网站的第一个首选。
